--- a/fnstats/fnstats.ipynb
+++ b/fnstats/fnstats.ipynb
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "75739a2c",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
     "def getEventData(url, pages):\n",
     "    df = eventData(url)\n",
     "    for i in range(pages - 1):\n",
-    "        page_url = 'https://fortnitetracker.com/events/epicgames_S21_PgodCup_NAW?window=S21_PgodCup_NAW_Round1&page={}'.format(i+1)\n",
+    "        page_url = url + '&page={}'.format(i+1)\n",
     "        page_df = eventData(page_url)\n",
     "        df = pd.concat([df, page_df], ignore_index = True)\n",
     "    return df"
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "3fe97b87",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "ed1c5536",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "e4cd25ee",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "a8930eeb",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "e1f18799",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1471,7 @@
        "Name: wins, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "id": "e8a92665",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015484f2",
+   "id": "183fe7c2",
    "metadata": {},
    "outputs": [],
    "source": []
